--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -346,7 +346,7 @@ EQSTester_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,S
 LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/AI_Brainstuff/EQS/EQS_FindPlayer
@@ -383,7 +383,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.749049664
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy/Charger
+ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2307,9 +2307,9 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [RootWindow]
-ScreenPosition=X=195.000 Y=110.000
+ScreenPosition=X=499.000 Y=57.000
 WindowSize=X=1290.000 Y=730.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2354,7 +2354,7 @@ UNR=../../../../Unreal/The_Influence/InfluencePackage/Content/influence/AdriaanD
 BRUSH=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 FBX=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 FBXAnim=../../../../../../The influence/The_Influence/InfluencePackage/Content/
-GenericImport=../../../../../../Users/rippo/Desktop/Personal/InfluenceH/Props/data/Box_Cardb.obj
+GenericImport=../../../../../../Users/rippo/Desktop/Personal/InfluenceH/Moose/data/Enemy_Charger.fbx
 GenericExport=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 GenericOpen=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 GenericSave=../../../../../../The influence/The_Influence/InfluencePackage/Content/
@@ -3377,9 +3377,9 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=d:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
