added keys and optimization changes
-keys and different colored versions
-fence fixed
-made every material have a roughness value of 1
-project thumbnail is customized
-landscape optimization (yeah even more)
-none of you fucking read these anyway
-rendering related optimizations
-sky sphere resolution lowered to match game style with hope that we can have an aurora borealis system that is low res and functional with unreal sky sphere

--- a/InfluencePackage/Config/DefaultGame.ini
+++ b/InfluencePackage/Config/DefaultGame.ini
@@ -1,10 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=28761BBA4ED2D78DD204A8855C9F2CAC
-ProjectName=HorrorEngine
+ProjectName=influence
 ProjectVersion=3.0
-CompanyName=tansuergene
-Homepage="https://www.tansuergene.com"
-SupportContact=support@tansuergene.com
+CompanyName=poop games
+Homepage=
+SupportContact=
 CopyrightNotice=
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8907DF1648D7441AD1334D9290378385", "Horror Engine")
 
