--- a/InfluencePackage/Config/DefaultEngine.ini
+++ b/InfluencePackage/Config/DefaultEngine.ini
@@ -61,6 +61,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/HorrorEngine")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/HorrorEngine")
+bUseFixedFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
