--- a/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/InfluencePackage/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -373,32 +373,32 @@ MultyCamSwitch_2_C=
 ExitBuilding_C=Camera_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.[HE]Jump,InputSettings.Bindings.ActionMappings.[HE]Crouch,InputSettings.Bindings.ActionMappings.[HE]LeanLeft,InputSettings.Bindings.ActionMappings.[HE]LeanRight,InputSettings.Bindings.ActionMappings.[HE]Run,InputSettings.Bindings.ActionMappings.[HE]Focus,InputSettings.Bindings.ActionMappings.[HE]Use,InputSettings.Bindings.ActionMappings.[HE]AlternativeUse,InputSettings.Bindings.ActionMappings.[HE]Pistol,InputSettings.Bindings.ActionMappings.[HE]Fire,InputSettings.Bindings.ActionMappings.[HE]Reload,InputSettings.Bindings.ActionMappings.[HE]Glowstick,InputSettings.Bindings.ActionMappings.[HE]Flashlight,InputSettings.Bindings.ActionMappings.[HE]Lighter,InputSettings.Bindings.ActionMappings.[HE]Torch,InputSettings.Bindings.ActionMappings.[HE]NightVision,InputSettings.Bindings.ActionMappings.[HE]Cameroid,InputSettings.Bindings.ActionMappings.[HE]NextEquipment,InputSettings.Bindings.ActionMappings.[HE]PrevEquipment,InputSettings.Bindings.ActionMappings.[HE]Unequip,InputSettings.Bindings.ActionMappings.[HE]Inventory,InputSettings.Bindings.ActionMappings.[HE]Examine,InputSettings.Bindings.ActionMappings.[HE]PanItem,InputSettings.Bindings.ActionMappings.[HE]RotateObject,InputSettings.Bindings.ActionMappings.[HE]ThrowObject,InputSettings.Bindings.ActionMappings.[HE]Menu,InputSettings.Bindings.ActionMappings.[HE]Quickload,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.[HE]Turn,InputSettings.Bindings.AxisMappings.[HE]LookUp,InputSettings.Bindings.AxisMappings.[HE]MoveForward,InputSettings.Bindings.AxisMappings.[HE]MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,Charger_BP_C.TransformCommon.Transform,Charger_BP_C.Physics.ConstraintsGroup,Enemy_Main_C.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.Class,
 
 [EditorStartup]
-LastLevel=/Game/influence/maps/Island
+LastLevel=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/influence/Props/Weapons/shotgun/simple_assets
-MRUItem1=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/ExitBuilding
-MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
-MRUItem3=/Game/influence/Environment_Assets/Door/BP_Door
-MRUItem4=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/MultyCamSwitch_2
-MRUItem5=/Game/influence/maps/Island
-MRUItem6=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
-MRUItem7=/Game/90s_Style_Graphics/Blueprints/Fixed_Camera/Fixed_Camera_BP
-MRUItem8=/Game/influence/Props/Props_Materials/Lamp
-MRUItem9=/Game/influence/Props/Props_Materials/Trash_Can
-MRUItem10=/Game/influence/Props/Props_Materials/cardboardBox_M
-MRUItem11=/Game/influence/Props/Trash_Can
-MRUItem12=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
-MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch2
-MRUItem14=/Game/influence/Environment_Assets/Wallwithwindow/wall_with_window
-MRUItem15=/Game/influence/Environment_Assets/roof/Roof_M_t
-MRUItem16=/Game/influence/Environment_Assets/roof/Rooftest
-MRUItem17=/Game/influence/Environment_Assets/Stairs/stairs
-MRUItem18=/Game/influence/Environment_Assets/wall/wall
-MRUItem19=/Game/influence/Environment_Assets/wall/Wall_sm
+MRUItem0=/Game/influence/Props/Props_Materials/Playground2_1
+MRUItem1=/Game/influence/Props/Weapons/shotgun/simple_assets
+MRUItem2=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/ExitBuilding
+MRUItem3=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch
+MRUItem4=/Game/influence/Environment_Assets/Door/BP_Door
+MRUItem5=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/MultyCamSwitch_2
+MRUItem6=/Game/influence/maps/Island
+MRUItem7=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan
+MRUItem8=/Game/90s_Style_Graphics/Blueprints/Fixed_Camera/Fixed_Camera_BP
+MRUItem9=/Game/influence/Props/Props_Materials/Lamp
+MRUItem10=/Game/influence/Props/Props_Materials/Trash_Can
+MRUItem11=/Game/influence/Props/Props_Materials/cardboardBox_M
+MRUItem12=/Game/influence/Props/Trash_Can
+MRUItem13=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/IF_Character
+MRUItem14=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/CamSwitch2
+MRUItem15=/Game/influence/Environment_Assets/Wallwithwindow/wall_with_window
+MRUItem16=/Game/influence/Environment_Assets/roof/Roof_M_t
+MRUItem17=/Game/influence/Environment_Assets/roof/Rooftest
+MRUItem18=/Game/influence/Environment_Assets/Stairs/stairs
+MRUItem19=/Game/influence/Environment_Assets/wall/wall
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -413,7 +413,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.749049664
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Char/Inv_Items/keys
+ContentBrowserDrawer.SelectedPaths=/Game/influence/Props
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -439,7 +439,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/influence/Props
+ContentBrowserTab1.SelectedPaths=/Game/influence/Props/Props_Materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2701,9 +2701,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/influence/Props/Bench.Bench;
+RecentlyPlaced=/Game/influence/Props/Playground.Playground;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/ExitBuilding.ExitBuilding;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/MultyCamSwitch_2.MultyCamSwitch_2;
 RecentlyPlaced=/Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/NewCam.NewCam;
@@ -2722,15 +2724,13 @@ RecentlyPlaced=/Game/influence/Environment_Assets/Pavement/square_pavement.squar
 RecentlyPlaced=/Game/influence/Props/cardboardBox_SM.cardboardBox_SM;
 RecentlyPlaced=/Game/influence/Props/box.box;
 RecentlyPlaced=/Game/influence/Environment_Assets/Separator/separator.separator;
-RecentlyPlaced=/Game/influence/Environment_Assets/Wallwithwindow/wall_with_window.wall_with_window;
-RecentlyPlaced=/Game/influence/Props/Tree_SM.Tree_SM;
 
 [Directories2]
 UNR=../../../../Unreal/The_Influence/InfluencePackage/Content/influence/maps
 BRUSH=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 FBX=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 FBXAnim=../../../../../../The influence/The_Influence/InfluencePackage/Content/
-GenericImport=../../../../The Influence/Kronens/Kronen_Male_Export/Kronen_Model_02.fbx
+GenericImport=../../../../The Influence/Props/Bench/Bench.fbx
 GenericExport=C:/Users/bhdli/Desktop/testss.FBX
 GenericOpen=../../../../../../The influence/The_Influence/InfluencePackage/Content/
 GenericSave=../../../../../../The influence/The_Influence/InfluencePackage/Content/
@@ -3736,7 +3736,7 @@ SkeletonEditor.TimeStamp=2023.12.12-21.01.47
 SkeletonEditor.LastCompileMethod=External
 PinnedCommandList.TimeStamp=2023.12.12-21.01.46
 PinnedCommandList.LastCompileMethod=External
-TextureEditor.TimeStamp=2023.08.11-17.12.14
+TextureEditor.TimeStamp=2023.08.11-22.02.41
 TextureEditor.LastCompileMethod=External
 GeometryProcessingInterfaces.TimeStamp=2023.12.12-21.01.44
 GeometryProcessingInterfaces.LastCompileMethod=External
@@ -3759,8 +3759,8 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -4006,7 +4006,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 StaticMesh="\"Object\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Invetory_C="\"Object\" "
@@ -4332,6 +4332,7 @@ EditorStyleSettings=True
 /Game/90s_Style_Graphics/Blueprints/Fixed_Camera/Fixed_Camera_BP.Fixed_Camera_BP=1
 /Game/influence/AdriaanDevPlace/NewInfuence_Coree/Assets/Actor/ExitBuilding.ExitBuilding=1
 /Game/influence/Props/Weapons/shotgun/simple_assets.simple_assets=1
+/Game/influence/Props/Props_Materials/Playground2_1.Playground2_1=1
 
 [MaterialEditor]
 PrimType=1
