project file setting

--- a/InfluencePackage/Config/DefaultGame.ini
+++ b/InfluencePackage/Config/DefaultGame.ini
@@ -1,12 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=28761BBA4ED2D78DD204A8855C9F2CAC
-ProjectName=influence
+ProjectName=Deep Infection
 ProjectVersion=3.0
 CompanyName=poop games
 Homepage=
 SupportContact=
 CopyrightNotice=
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8907DF1648D7441AD1334D9290378385", "Horror Engine")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "8907DF1648D7441AD1334D9290378385", "Deep Infection")
+Description=dumb ass zombie game
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
