--- a/InfluencePackage/Config/DefaultEngine.ini
+++ b/InfluencePackage/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameDefaultMap=/Game/HorrorEngine/Maps/Intro.Intro
 GlobalDefaultGameMode=/Game/HorrorEngine/Blueprints/Core/HorrorEngineGameMode.HorrorEngineGameMode_C
 GameInstanceClass=/Game/HorrorEngine/Blueprints/Core/HE_GameInstance.HE_GameInstance_C
-EditorStartupMap=/Game/influence/AdriaanDevPlace/MAP/DevMapAdriaan.DevMapAdriaan
+EditorStartupMap=/Game/influence/maps/Island.Island
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
