--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,35 +177,35 @@ LastLogListing=FBXImport
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
 
 [RootWindow]
 ScreenPosition=X=60.000 Y=104.000
@@ -1323,9 +1323,9 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.PersonaOptions]
@@ -1355,7 +1355,7 @@ bAllowMeshSectionSelection=False
 NumFolderFiltersInAssetBrowser=2
 AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=2,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=2,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
-AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=3,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=5,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="IKRetargetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
@@ -2849,6 +2849,8 @@ APB_KronenFemale_C.Default=True
 AnimPreviewInstance.RootMotion=True
 AnimPreviewInstance.Notifies=True
 AnimPreviewInstance.Montage=True
+MaterialExpression.MaterialExpression=True
+Texture2D.Interchange =True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2951,7 +2953,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Constraint Behavior.ShockPropagation,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive
 K2Node_EnhancedInputAction=SkeletalMeshComponent.TransformCommon.Transform,IF_Character_C.TransformCommon.Transform
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.TransformCommon.Transform,IF_Character_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.grasssounds,PropertyWrapper.DefaultValueCategory.Snowsounds,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-SceneComponent=SkeletalMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,IF_Character_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.grasssounds,PropertyWrapper.DefaultValueCategory.Snowsounds,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Enemy_Main_C.Physics.ConstraintsGroup,Landscape.Collision.Collision
+SceneComponent=
 BP_BarDoor_C=StaticMeshComponent.Physics.ConstraintsGroup
 Player_Character_BP_C=SkeletalMeshComponent.TransformCommon.Transform,IF_Character_C.TransformCommon.Transform
 EdGraph=SkeletalMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,IF_Character_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.grasssounds,PropertyWrapper.DefaultValueCategory.Snowsounds
@@ -3013,36 +3015,36 @@ ABP_KrononSlow_C=
 APB_KronenFemale_C=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Idle1
-MRUItem1=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Idle1
-MRUItem2=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Walk1
-MRUItem3=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Death1
-MRUItem4=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Attack1
-MRUItem5=/Game/_Core/_Enemies/Kronen_Female_001/Kronen_Model_02_Skeleton
-MRUItem6=/Game/_Core/_Enemies/Kronen_Female_001/Kronen_Model_02
-MRUItem7=/Game/_Core/_Enemies/Kronen_Fast_001/KronenFast_Animations_Death1
-MRUItem8=/Game/_Core/_Enemies/Kronen_Fast_001/KronenFast_Animations_Walk1
-MRUItem9=/Game/_Core/_Enemies/Kronen_Fast_001/Kronen_Fast_Model
-MRUItem10=/Game/_Core/_Enemies/Kronen_Fast_001/KronenFast_Animations_Idle1
-MRUItem11=/Game/_Core/_Enemies/Kronen_Fast_001/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
-MRUItem12=/Game/_Core/_Enemies/Slugger_Enemy_001/The_Slugger
-MRUItem13=/Game/_Core/_Enemies/Kronen_Female_001/APB_KronenFemale
-MRUItem14=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale
-MRUItem15=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
-MRUItem16=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
-MRUItem17=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
-MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem19=/Game/_Core/_Enemies/Kronen_Male_001/BS_Kronon
-MRUItem20=/Game/_Core/_Enemies/_Main/Enemy_Main
-MRUItem21=/Game/_Core/_Enemies/Kronen_Fast_001/Kronen_Fast1
-MRUItem22=/Game/_Core/_Enemies/_Main/Piney_Senior
-MRUItem23=/Game/_Core/_Enemies/_Main/Piney_Senior_PhysicsAsset
-MRUItem24=/Game/_Core/_Enemies/_Main/Piney_Senior_Skeleton
-MRUItem25=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
-MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
-MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
-MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
-MRUItem29=/Game/_Core/_Player/IF_Character
+MRUItem0=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Walk
+MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy_001/SluggerTexture
+MRUItem2=/Game/_Core/_Enemies/Kronen_Male_003/Kronen_Textures_M_03
+MRUItem3=/Game/_Core/_Enemies/Kronen_Male_002/Kronen_Textures_M_02
+MRUItem4=/Game/_Core/_Enemies/Kronen_Male_001/Kronen_Textures_M_01
+MRUItem5=/Game/_Core/_Enemies/Kronen_Female_003/Kronen_Textures_F_03
+MRUItem6=/Game/_Core/_Enemies/Kronen_Female_002/Kronen_Textures_F_02
+MRUItem7=/Game/_Core/_Enemies/Kronen_Female_001/Kronen_Textures_01_WIP3
+MRUItem8=/Game/_Core/_Enemies/Kronen_Fast_003/Kronen_Textures_Fast_03
+MRUItem9=/Game/_Core/_Enemies/Kronen_Fast_002/Kronen_Textures_Fast_02
+MRUItem10=/Game/_Core/_Enemies/Kronen_Fast_002/Kronen_Fast2
+MRUItem11=/Game/_Core/_Enemies/Kronen_Fast_001/Kronen_Textures_Fast_01
+MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/Catwalk_Grate_Alpha
+MRUItem13=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/BackPanel_AlbedoTransparency
+MRUItem14=/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/Catwalk_Grate_AlbedoTransparency
+MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/Lab_floor/grate_texture_5
+MRUItem16=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Attack
+MRUItem17=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Run
+MRUItem18=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM
+MRUItem19=/Game/_Core/_Enemies/_Charger/Moose_Tent_DM
+MRUItem20=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
+MRUItem21=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
+MRUItem22=/Game/_Core/_Enemies/_Charger/Moose_Tent_M
+MRUItem23=/Game/_Core/_Enemies/_Charger/Moose_Body_M
+MRUItem24=/Game/_Core/_Enemies/Kronen_Female_003/Kronen_Fem3
+MRUItem25=/Game/_Core/_Enemies/_Charger/Moose_Antler_M
+MRUItem26=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Idle1
+MRUItem27=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Idle1
+MRUItem28=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Walk1
+MRUItem29=/Game/_Core/_Enemies/Kronen_Female_001/KronenFemale_Animations_Death1
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -3162,6 +3164,30 @@ Texture2D.Texture=True
 /Game/_Core/_Enemies/Kronen_Fast_001/Kronen_Fast_Model.Kronen_Fast_Model=1
 /Game/_Core/_Enemies/Kronen_Female_001/Kronen_Model_02.Kronen_Model_02=1
 /Game/_Core/_Enemies/Kronen_Female_001/Kronen_Model_02_Skeleton.Kronen_Model_02_Skeleton=1
+/Game/_Core/_Enemies/Kronen_Female_003/Kronen_Fem3.Kronen_Fem3=1
+/Game/_Core/_Enemies/_Charger/Moose_Tent_M.Moose_Tent_M=1
+/Game/_Core/_Enemies/_Charger/Moose_Body_M.Moose_Body_M=1
+/Game/_Core/_Enemies/_Charger/Moose_Antler_M.Moose_Antler_M=1
+/Game/_Core/_Enemies/Kronen_Fast_001/Kronen_Textures_Fast_01.Kronen_Textures_Fast_01=1
+/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM.Carp_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Body_DM.Moose_Body_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Tent_DM.Moose_Tent_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Antler_DM.Moose_Antler_DM=1
+/Game/_Core/_Enemies/_Charger/Enemy_Charger_WindUp.Enemy_Charger_WindUp=1
+/Game/_Level/_LevelAssets/_Environment_Assets/Lab_floor/grate_texture_5.grate_texture_5=1
+/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/Catwalk_Grate_Alpha.Catwalk_Grate_Alpha=1
+/Game/_Level/_LevelAssets/_Environment_Assets/Catwalk/Catwalk_Grate_AlbedoTransparency.Catwalk_Grate_AlbedoTransparency=1
+/Game/_Core/_Enemies/Kronen_Fast_002/Kronen_Fast2.Kronen_Fast2=1
+/Game/_Core/_Enemies/Kronen_Female_001/Kronen_Textures_01_WIP3.Kronen_Textures_01_WIP3=1
+/Game/_Core/_Enemies/Kronen_Female_002/Kronen_Textures_F_02.Kronen_Textures_F_02=1
+/Game/_Core/_Enemies/Kronen_Female_003/Kronen_Textures_F_03.Kronen_Textures_F_03=1
+/Game/_Core/_Enemies/Kronen_Male_001/Kronen_Textures_M_01.Kronen_Textures_M_01=1
+/Game/_Core/_Enemies/Kronen_Male_002/Kronen_Textures_M_02.Kronen_Textures_M_02=1
+/Game/_Core/_Enemies/Kronen_Male_003/Kronen_Textures_M_03.Kronen_Textures_M_03=1
+/Game/_Core/_Enemies/Slugger_Enemy_001/SluggerTexture.SluggerTexture=1
+/Game/_Core/_Enemies/Kronen_Fast_002/Kronen_Textures_Fast_02.Kronen_Textures_Fast_02=1
+/Game/_Core/_Enemies/Kronen_Fast_003/Kronen_Textures_Fast_03.Kronen_Textures_Fast_03=1
+/Game/_Core/_Enemies/_Charger/Enemy_Charger_Run.Enemy_Charger_Run=1
 
 [DetailPropertyExpansion]
 CapsuleComponent=
@@ -3169,7 +3195,7 @@ ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="\"Object.SkeletalMeshes\" "
+Object=
 IF_Character_C=
 Character=
 Pawn=
@@ -3197,7 +3223,7 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" "
 Bp_FootstepsNoti_C=
 AnimNotify=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.Texture.SourceColorSettings\" \"Object.LevelOfDetail.Downscale\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SkeletalMesh=
 SkinnedAsset=
@@ -3275,7 +3301,6 @@ MRUItem0=/Game/_Level/Island
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [FoliageEdit]
 Radius=110.718262
