--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3195,6 +3195,7 @@ Texture2D.Texture=True
 /Game/_Level/_LevelAssets/_Props/_Materials/Carpet_M.Carpet_M=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Carpet_DM.Carpet_DM=1
 /Game/_Level/_LevelAssets/_Props/_Furniture/Carpet_SM.Carpet_SM=1
+/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Attack1.TheSlugger_Animations_Attack1=1
 
 [DetailPropertyExpansion]
 CapsuleComponent=
